refactor: Replace Paths.get.resolve by Path.of